# make_cv

./: .gitignore  Activity Reporting.url  README.md  README.url  installation.txt  pyproject.toml
files/Awards/: personal awards data.xlsx  student awards data.xlsx
files/CV/: cv.tex  cv_header.tex  cv_tables.tex  far.tex  nsf2page.tex  webpage.tex
files/Proposals & Grants/: proposals & grants.xlsx
files/Scholarship/: scholarship.bib  thesis data.xlsx
files/Service/: reviews data.xlsx  service data.xlsx
src/: UR2latex.py  bib2latex_far.py  bib_add_citations.py  bib_add_keywords.py  bib_get_entries.py  create_config.py  make_cv.py  personal_awards2latex.py  personal_awards2latex_far.py  publons2excel.py  publons2latex.py  service2latex.py  student_awards2latex.py  teaching2latex_far.py  test_cv.py  test_far.py  test_web.py
src/make_cv/: UR2latex.py  UR2latex_far.py  bib2latex_far.py  bib_add_citations.py  bib_add_keywords.py  bib_add_student_markers.py  bib_get_entries.py  create_config.py  grants2latex_far.py  invited_text2bib.bash  make_cv.py  make_far.py  make_web.py  personal_awards2latex.py  personal_awards2latex_far.py  props2latex_far.py  publons2excel.py  publons2latex.py  publons2latex_far.py  publons_editor2excel.py  service2latex.py  service2latex_far.py  stringprotect.py  student_awards2latex.py  student_awards2latex_far.py  teaching2latex.py  teaching2latex_far.py  thesis2latex_far.py
src/make_cv/files/Awards/: personal awards data.xlsx  student awards data.xlsx
src/make_cv/files/CV/: cv.cfg  cv.tex  cv_tables.tex  far.tex  web.tex
src/make_cv/files/Proposals & Grants/: proposals & grants.xlsx
src/make_cv/files/Scholarship/: current student data.xlsx  scholarship.bib  thesis data.xlsx
src/make_cv/files/Service/: reviews data.xlsx  service data.xlsx  undergraduate research data.xlsx
src/make_cv/files/Teaching/: teaching evaluation data.xlsx
